# backend_PainelPesquisaEConsultoria

./: .env  .env_exemplo  README.md  db.sqlite3  output.xlsx  pyproject.toml  requirements.txt
actions/: import_xslx.py
core/: settings.py  urls.py
excel/: membros_std_ovcciHP.xlsx  teste2_lTAUqxI.xlsx
fusion/: admin.py  apps.py  models.py  resources.py  serializers.py  views.py
fusion/migrations/: 0001_initial.py  0002_excelfile.py  0002_fileuploadapi_description.py  0002_rename_uploadedfile_fileupload.py
fusion/templates/: excel.html
usuario/migrations/: 0001_initial.py
